--- a/sass/_general.sass
+++ b/sass/_general.sass
@@ -324,10 +324,10 @@ nav
 
 	&_descr
 		margin-top: 25px
-		font-weight: 300;
-		font-size: 17px;
-		line-height: 24px;
-		color: #1CA8C3;
+		font-weight: 300
+		font-size: 17px
+		line-height: 24px
+		color: #1CA8C3
 	.warning
 		.require_title
 			color: $second-color
