--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -84,8 +84,8 @@
 			font-size: 17px
 			line-height: 22px
 	.choice
-		min-height: initial;
-		padding: 30px 0 48px;
+		min-height: initial
+		padding: 30px 0 48px
 		&_img
 			width: 100%
 	.require
@@ -93,7 +93,6 @@
 		.title
 			margin-top: 20px
 			font-size: 30px
-		&_title
 	.map
 		min-height: 600px
 	.footer			
@@ -324,8 +323,8 @@
 		.subtitle
 			margin-top: 9px
 		&_item
-			width: 290px;
-			height: 254px;
+			width: 290px
+			height: 254px
 		&_item_subtitle
 			// width: 226px
 			font-size: 18px
@@ -350,8 +349,8 @@
 	.require
 		padding: 24px 0 30px
 		.title
-			margin-top: 16px;
-			font-size: 16px;
+			margin-top: 16px
+			font-size: 16px
 		&_title
 			font-size: 16px
 		&_block			
@@ -405,9 +404,6 @@
 					&:nth-child(2)
 						width: 80px
 						text-align: right
-				
-					
-			
 			&_lang 
 				margin-top: 10px
 
